src/oxc/snapshots/ghat__oxc__tests__parse_js_function.snap
---
source: src/oxc/tests.rs
expression: "js(\"function add(a, b) { return a + b; }\\n\")"
---
function add(a, b) {
	return a + b;
}
