src/oxc/snapshots/ghat__oxc__tests__parse_js_rejects_ts_syntax.snap
---
source: src/oxc/tests.rs
expression: "js_err(\"const x: number = 1;\\n\")"
---

  x Missing initializer in const declaration
   ,----
 1 | const x: number = 1;
   :       ^
   `----
  help: Add an initializer (e.g. ` = undefined`) here


  x Expected a semicolon or an implicit semicolon after a statement, but found
  | none
   ,----
 1 | const x: number = 1;
   :        ^
   `----
  help: Try inserting a semicolon here
