src/oxc/snapshots/ghat__oxc__tests__parse_js_syntax_error.snap
---
source: src/oxc/tests.rs
expression: "js_err(\"const x = {;\")"
---

  x Unexpected token
   ,----
 1 | const x = {;
   :            ^
   `----
