src/oxc/snapshots/ghat__oxc__tests__parse_ts_interface.snap
---
source: src/oxc/tests.rs
expression: "ts_stripped(\"interface Foo { bar: string; baz: number; }\\nconst a = 1;\\n\")"
---
const a = 1;
