src/oxc/snapshots/ghat__oxc__tests__parse_ts_syntax_error.snap
---
source: src/oxc/tests.rs
expression: "ts_err(\"let x: = ;\")"
---

  x Unexpected token
   ,----
 1 | let x: = ;
   :        ^
   `----
