src/oxc/snapshots/ghat__oxc__tests__parse_ts_with_annotations.snap
---
source: src/oxc/tests.rs
expression: "ts_stripped(\"const x: number = 42;\\n\")"
---
const x = 42;
