src/oxc/snapshots/ghat__oxc__tests__strip_preserves_real_exports.snap
---
source: src/oxc/tests.rs
expression: "ts_stripped(\"export const x: number = 1;\\nexport default function foo(): void {}\\n\")"
---
export const x = 1;
export default function foo() {}
