src/oxc/snapshots/ghat__oxc__tests__strip_removes_phantom_export.snap
---
source: src/oxc/tests.rs
expression: "ts_stripped(\"import type { Foo } from './foo';\\nconst x: Foo = { bar: 1 };\\n\")"
---
const x = { bar: 1 };
