src/oxc/snapshots/ghat__oxc__tests__strip_type_alias.snap
---
source: src/oxc/tests.rs
expression: "ts_stripped(\"type MyType = string | number;\\nconst y = 'hello';\\n\")"
---
const y = "hello";
