src/oxc/snapshots/ghat__oxc__tests__strip_types_from_function.snap
---
source: src/oxc/tests.rs
expression: "ts_stripped(\"function add(a: number, b: number): number { return a + b; }\\n\")"
---
function add(a, b) {
	return a + b;
}
